--- a/package.json
+++ b/package.json
@@ -1,6 +1,20 @@
 {
+  "name": "curtisjhu",
+  "version": "1.0.0",
+  "description": "personal website",
+  "main": "index.js",
+  "type": "commonjs",
+  "scripts": {
+    "scripts": "cd bin && tsc",
+    "start": "concurrently \"tsc -w\" \"node bin/watch.js\"",
+    "build": "node bin/build.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@mdx-js/mdx": "^2.3.0",
+    "@mdx-js/node-loader": "^2.3.0",
     "assert": "^2.0.0",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
@@ -11,6 +25,15 @@
     "hyperstream": "^1.2.2",
     "minify-stream": "^2.1.0",
     "mkdirp": "^2.1.6",
-    "simple-html-index": "^1.5.0"
+    "regl": "^2.1.0",
+    "rehype-katex": "^6.0.2",
+    "remark-math": "^5.1.1",
+    "simple-html-index": "^1.5.0",
+    "typescript": "^5.0.2"
+  },
+  "devDependencies": {
+    "@types/babelify": "^7.3.7",
+    "@types/node": "^18.15.10",
+    "concurrently": "^7.6.0"
   }
 }
