--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "scripts": "cd bin && tsc",
-    "start": "concurrently \"tsc -w\" \"node bin/watch.js\"",
+    "start": "node bin/watch.js",
     "build": "node bin/build.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "curtisjhu",
   "license": "ISC",
+  "targets": {
+    "default": {
+      "distDir": "./output"
+    }
+  },
   "dependencies": {
-    "@mdx-js/mdx": "^2.3.0",
     "@mdx-js/node-loader": "^2.3.0",
     "assert": "^2.0.0",
     "babelify": "^10.0.0",
@@ -25,15 +27,26 @@
     "hyperstream": "^1.2.2",
     "minify-stream": "^2.1.0",
     "mkdirp": "^2.1.6",
+    "preact": "^10.13.2",
     "regl": "^2.1.0",
-    "rehype-katex": "^6.0.2",
-    "remark-math": "^5.1.1",
     "simple-html-index": "^1.5.0",
     "typescript": "^5.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/plugin-transform-react-jsx": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/babelify": "^7.3.7",
     "@types/node": "^18.15.10",
-    "concurrently": "^7.6.0"
+    "autoprefixer": "^10.4.14",
+    "babel-plugin-postcss": "^1.1.0",
+    "concurrently": "^7.6.0",
+    "css-loader": "^6.7.3",
+    "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
+    "style-loader": "^3.3.2",
+    "tailwindcss": "^3.2.7"
   }
 }
