--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,13 @@
 {
-	"plugins": [
-	  ["@babel/plugin-transform-react-jsx", { "pragma":"h" }],
-	  ["babel-plugin-postcss"]
-	]
-  }
+    "presets": ["@babel/preset-env", "@babel/preset-react"],
+    "plugins": [
+        [
+            "@babel/plugin-transform-react-jsx",
+            {
+                "runtime": "automatic",
+                "importSource": "react"
+            }
+        ],
+        "babel-plugin-postcss"
+    ]
+}
