--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node bin/watch.js",
+    "css-dev": "npx tailwindcss -i ./global.css -o ./pages/global.css",
+    "copy-dev": "node bin/copy-template.js",
+    "css-prod": "npx tailwindcss -i ./global.css -o ./dist/global.css",
+    "copy-prod": "node bin/copy.js",
+    "start": "npm run css-dev && node bin/watch.js",
     "build": "node bin/build.js"
   },
   "author": "curtisjhu",
@@ -16,7 +20,6 @@
     }
   },
   "dependencies": {
-    "@mdx-js/node-loader": "^2.3.0",
     "assert": "^2.0.0",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
@@ -26,14 +29,14 @@
     "html-inject-meta": "^3.0.0",
     "hyperstream": "^1.2.2",
     "minify-stream": "^2.1.0",
-    "mkdirp": "^2.1.6",
-    "preact": "^10.13.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "regl": "^2.1.0",
     "simple-html-index": "^1.5.0",
     "typescript": "^5.0.2"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/core": "^7.21.3",
     "@babel/plugin-transform-react-jsx": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
@@ -41,11 +44,16 @@
     "@types/babelify": "^7.3.7",
     "@types/node": "^18.15.10",
     "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.2",
     "babel-plugin-postcss": "^1.1.0",
     "concurrently": "^7.6.0",
+    "cp": "^0.2.0",
     "css-loader": "^6.7.3",
+    "mkdirp": "^2.1.6",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
+    "postcss-loader": "^7.1.0",
+    "rmrf": "^2.0.4",
     "style-loader": "^3.3.2",
     "tailwindcss": "^3.2.7"
   }
