--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "css-dev": "npx tailwindcss -i ./global.css -o ./pages/global.css",
-    "copy-dev": "node bin/copy-template.js",
-    "css-prod": "npx tailwindcss -i ./global.css -o ./dist/global.css",
-    "copy-prod": "node bin/copy.js",
-    "start": "npm run css-dev && node bin/watch.js",
+    "css-dev": "npx tailwindcss -i ./templates/global.css -o ./templates/_index.css",
+    "copy": "node bin/copy-template.js",
+    "start": "node bin/watch.js",
     "build": "node bin/build.js"
   },
   "author": "curtisjhu",
@@ -25,18 +23,27 @@
     "browserify": "^17.0.0",
     "budo": "^11.8.4",
     "cpr": "^3.0.1",
+    "dat.gui": "^0.7.9",
+    "fail-nicely": "^2.0.0",
+    "glsl-colormap": "^1.0.1",
     "glslify": "^7.1.1",
-    "html-inject-meta": "^3.0.0",
-    "hyperstream": "^1.2.2",
+    "katex": "^0.16.4",
+    "mathbox": "^2.3.1",
+    "milligram": "^1.4.1",
     "minify-stream": "^2.1.0",
+    "mouse-change": "^1.4.0",
+    "mouse-wheel": "^1.2.0",
+    "ndarray": "^1.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "regl": "^2.1.0",
-    "simple-html-index": "^1.5.0",
-    "typescript": "^5.0.2"
+    "showdown": "^2.1.0",
+    "three": "^0.151.3",
+    "tweakpane": "^3.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
+    "@babel/node": "^7.20.7",
     "@babel/plugin-transform-react-jsx": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
@@ -53,8 +60,11 @@
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
     "postcss-loader": "^7.1.0",
+    "preact": "^10.13.2",
     "rmrf": "^2.0.4",
     "style-loader": "^3.3.2",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "vite": "^4.2.1",
+    "vite-node": "^0.30.0"
   }
 }
