--- a/package.json
+++ b/package.json
@@ -18,53 +18,25 @@
     }
   },
   "dependencies": {
-    "assert": "^2.0.0",
-    "babelify": "^10.0.0",
-    "browserify": "^17.0.0",
-    "budo": "^11.8.4",
-    "cpr": "^3.0.1",
     "dat.gui": "^0.7.9",
     "fail-nicely": "^2.0.0",
     "glsl-colormap": "^1.0.1",
     "glslify": "^7.1.1",
     "katex": "^0.16.4",
     "mathbox": "^2.3.1",
+    "mathlive": "^0.91.2",
     "milligram": "^1.4.1",
-    "minify-stream": "^2.1.0",
     "mouse-change": "^1.4.0",
     "mouse-wheel": "^1.2.0",
     "ndarray": "^1.0.19",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "p5": "^1.6.0",
+    "preact": "^10.13.2",
     "regl": "^2.1.0",
     "showdown": "^2.1.0",
     "three": "^0.151.3",
     "tweakpane": "^3.1.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.3",
-    "@babel/node": "^7.20.7",
-    "@babel/plugin-transform-react-jsx": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/babelify": "^7.3.7",
-    "@types/node": "^18.15.10",
-    "autoprefixer": "^10.4.14",
-    "babel-loader": "^9.1.2",
-    "babel-plugin-postcss": "^1.1.0",
-    "concurrently": "^7.6.0",
-    "cp": "^0.2.0",
-    "css-loader": "^6.7.3",
-    "mkdirp": "^2.1.6",
-    "postcss": "^8.4.21",
-    "postcss-import": "^15.1.0",
-    "postcss-loader": "^7.1.0",
-    "preact": "^10.13.2",
-    "rmrf": "^2.0.4",
-    "style-loader": "^3.3.2",
-    "tailwindcss": "^3.2.7",
-    "vite": "^4.2.1",
-    "vite-node": "^0.30.0"
+    "concurrently": "^7.6.0"
   }
 }
