--- a/bin/package.json
+++ b/bin/package.json
@@ -29,6 +29,7 @@
         "postcss": "^8.4.21",
         "postcss-import": "^15.1.0",
         "postcss-loader": "^7.1.0",
+        "react": "^18.2.0",
         "rmrf": "^2.0.4",
         "style-loader": "^3.3.2",
         "tailwindcss": "^3.2.7"
