--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     }
   },
   "dependencies": {
+    "@mdx-js/esbuild": "^2.3.0",
     "dat.gui": "^0.7.9",
     "fail-nicely": "^2.0.0",
     "glsl-colormap": "^1.0.1",
@@ -31,6 +32,7 @@
     "ndarray": "^1.0.19",
     "p5": "^1.6.0",
     "preact": "^10.13.2",
+    "react": "^18.2.0",
     "regl": "^2.1.0",
     "showdown": "^2.1.0",
     "three": "^0.151.3",
