--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "@mdx-js/esbuild": "^2.3.0",
     "babelify": "^10.0.0",
     "budo": "^11.8.4",
+    "cpr": "^3.0.1",
     "dat.gui": "^0.7.9",
     "fail-nicely": "^2.0.0",
+    "fs-extra": "^11.1.1",
     "glsl-colormap": "^1.0.1",
     "glslify": "^7.1.1",
+    "html-inject-meta": "^3.0.0",
     "katex": "^0.16.4",
     "mathbox": "^2.3.1",
     "mathlive": "^0.91.2",
     "milligram": "^1.4.1",
+    "minify-stream": "^2.1.0",
+    "mkdirp": "^3.0.1",
     "mouse-change": "^1.4.0",
     "mouse-wheel": "^1.2.0",
     "ndarray": "^1.0.19",
