--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "css-dev": "npx tailwindcss -i ./templates/global.css -o ./templates/_index.css",
     "copy": "node bin/copy-template.js",
     "start": "node bin/watch.js",
-    "build": "node bin/build.js"
+    "build": "node bin/build.js",
+    "budo": "budo --open "
   },
   "author": "curtisjhu",
   "license": "ISC",
+  "browserify": {
+    "transform": [
+      "glslify"
+    ]
+  },
   "dependencies": {
     "@mdx-js/esbuild": "^2.3.0",
     "babelify": "^10.0.0",
@@ -21,7 +27,6 @@
     "fail-nicely": "^2.0.0",
     "fs-extra": "^11.1.1",
     "glsl-colormap": "^1.0.1",
-    "glslify": "^7.1.1",
     "html-inject-meta": "^3.0.0",
     "katex": "^0.16.4",
     "mathbox": "^2.3.1",
@@ -42,6 +47,7 @@
     "tweakpane-plugin-infodump": "github:doersino/tweakpane-plugin-infodump"
   },
   "devDependencies": {
-    "concurrently": "^7.6.0"
+    "concurrently": "^7.6.0",
+    "glslify": "^7.1.1"
   }
 }
