--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "personal website",
   "main": "index.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "css-dev": "npx tailwindcss -i ./templates/global.css -o ./templates/_index.css",
     "copy": "node bin/copy-template.js",
@@ -22,11 +22,14 @@
     "@mdx-js/esbuild": "^2.3.0",
     "babelify": "^10.0.0",
     "budo": "^11.8.4",
+    "bunny": "^1.0.1",
     "cpr": "^3.0.1",
+    "d3": "^7.8.5",
     "dat.gui": "^0.7.9",
     "fail-nicely": "^2.0.0",
     "fs-extra": "^11.1.1",
     "glsl-colormap": "^1.0.1",
+    "glsl-solid-wireframe": "^1.0.1",
     "html-inject-meta": "^3.0.0",
     "katex": "^0.16.4",
     "mathbox": "^2.3.1",
@@ -42,6 +45,7 @@
     "preact": "^10.13.2",
     "react": "^18.2.0",
     "regl": "^2.1.0",
+    "regl-camera": "^2.1.1",
     "showdown": "^2.1.0",
     "three": "^0.151.3",
     "tweakpane": "^3.1.7",
