--- a/bin/babel.config.json
+++ b/bin/babel.config.json
@@ -1,7 +1,7 @@
 {
     "presets": [
         ["@babel/preset-env"],
-        "@babel/preset-react",
+        "@babel/preset-react"
     ],
     "sourceMaps": true,
     "plugins": [
@@ -10,11 +10,11 @@
             {
                 "pragma": "h",
                 "pragmaFrag": "Fragment"
-            },
+            }
             
         ],
         "@babel/plugin-syntax-jsx",
         "@babel",
         "babel-plugin-postcss"
-    ],
+    ]
 }
