--- a/package.json
+++ b/package.json
@@ -23,15 +23,20 @@
     ]
   },
   "dependencies": {
+    "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.23.2",
     "@mdx-js/esbuild": "^2.3.0",
     "@tensorflow/tfjs": "^4.10.0",
+    "angle-normals": "^1.0.0",
     "babelify": "^10.0.0",
     "browserify-shim": "^3.8.16",
     "budo": "^11.8.4",
     "bunny": "^1.0.1",
+    "canvas-fit": "^1.5.0",
+    "canvas-orbit-camera": "^1.0.2",
     "d3": "^7.8.5",
     "dat.gui": "^0.7.9",
+    "esbuild": "^0.23.0",
     "fail-nicely": "^2.0.0",
     "fs-extra": "^11.1.1",
     "function-plot": "^1.23.3",
@@ -57,16 +62,17 @@
     "regl-camera": "^2.1.1",
     "regl-gpu-lines": "^2.4.1",
     "regl-line": "^1.0.0",
+    "resl": "^1.0.3",
     "three": "^0.151.3",
-    "tweakpane": "^3.1.7",
+    "tweakpane": "^3.1.9",
     "tweakpane-latex": "^0.1.2",
+    "tweakpane-latex4": "npm:tweakpane-latex@^0.1.4",
     "tweakpane-plugin-infodump": "github:doersino/tweakpane-plugin-infodump",
-    "vector-field": "^2.1.1",
-    "vis-network": "^9.1.6"
+    "tweakpane4": "npm:tweakpane@^4.0.4",
+    "vis-network": "^9.1.9"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-methods": "^7.22.5",
     "@babel/plugin-transform-private-property-in-object": "^7.22.11",
     "concurrently": "^7.6.0",
