--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "d3": "^7.8.5",
     "dat.gui": "^0.7.9",
     "esbuild": "^0.23.0",
+    "esmify": "^2.1.1",
     "fail-nicely": "^2.0.0",
     "fs-extra": "^11.1.1",
     "function-plot": "^1.23.3",
